@@ -11,7 +11,10 @@ setup.py: $(top_builddir)/config.status
 EXTRA_DIST = __init__.py \
 	test_dummy.py \
 	test_hls_ring.py \
-	test_mpegts.py
+	test_mpegts.py \
+	test_mpegts.xml \
+	test_ts_segmenter.py \
+	test_ts_segmenter.xml
 
 check-local: trial
 
